WP-8680 Correcting the alignment of the social bar.

--- a/sass/conditionals/full-width-front.sass
+++ b/sass/conditionals/full-width-front.sass
@@ -14,7 +14,7 @@
     border-bottom-width: 0
     height: 600px
     margin-top: 70px
-    padding: 80px 0 0 90px
+    padding: 80px 0 0 155px
     +breakpoint($bp-for-phone-only)
       height: auto
       padding-bottom: 40px
